adding new service

--- a/index.html
+++ b/index.html
@@ -247,11 +247,13 @@
 											 href="/services/auto-detailing/">Auto Detailing</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/headlight-restoration/">Headlight Restoration</a></li>
-										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+										<li id="menu-item-1671" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/blackout-package/">Blackout Package</a></li>
-										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 <li id="menu-item-1672" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+													href="/services/wrapping-service/">Custom Car Wrapping</a></li>
+										<li id="menu-item-1673" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/camera-installation/">Dash Cam Installation</a></li>
-										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+										<li id="menu-item-1674" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/matte-paint-special/">Matte Paint Special</a></li>
 									</ul>
 								</li>
@@ -294,11 +296,13 @@
 												Detailing</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/headlight-restoration/">Headlight
 												Restoration</a></li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a href="/services/blackout-package/">Blackout
-												Package</a></li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1671"><a href="/services/blackout-package/">Blackout
+										    Package</a></li>
+									  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1672"><a href="/services/wrapping-service/">Custom Car
+													Wrapping</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1673"><a href="/services/camera-installation/">Dash
 												Cam Installation</a></li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/matte-paint-special/">Matte
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1674"><a href="/services/matte-paint-special/">Matte
 												Paint Special</a></li>
 									</ul>
 								</li>
@@ -450,7 +454,7 @@
 												 data-frames='[{"delay":900,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
 												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
-													<h2>NEW BLACKOUT PACKAGE AVAILABLE</h2>
+													<h2>BLACKOUT PACKAGE AVAILABLE</h2>
 												</div>
 
 												<!-- LAYER NR. 11 -->
@@ -464,6 +468,41 @@
 
 												<!-- LAYER NR. 12 -->
 												<div class="tp-caption black  " id="slide-3-layer-3" data-x="center" data-hoffset="" data-y="422"
+												 data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-responsive="off"
+												 data-frames='[{"delay":1300,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
+												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: normal; font-size: 16px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;"><a
+													 title="MAKE AN APPOINTMENT" href="/appointment/" class="more simple" target="_top"><span>MAKE AN
+															APPOINTMENT</span></a> </div>
+											</li>
+											<li data-index="rs-4" data-transition="fade" data-slotamount="1" data-hideafterloop="0"
+											 data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default"
+											 data-thumb="/assets/pics/car-wrapping-service.jpg" data-delay="6000" data-rotate="0" data-saveperformance="off"
+											 data-title="Slide_4" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6=""
+											 data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+												<!-- MAIN IMAGE -->
+												<img src="/assets/pics/car-wrapping-service.jpg" alt="" title="image_04.jpg" width="1920" height="600" data-bgposition="center top"
+												 data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+
+												<div class="tp-caption black  " id="slide-4-layer-1" data-x="center" data-hoffset="" data-y="262"
+												 data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-responsive="off"
+												 data-frames='[{"delay":900,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
+												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
+													<h2>QUALITY AFFORDABLE CUSTOM CAR WRAPPING</h2>
+												</div>
+
+												<!-- LAYER NR. 11 -->
+												<div class="tp-caption black  " id="slide-4-layer-2" data-x="center" data-hoffset="" data-y="343"
+												 data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-responsive="off"
+												 data-frames='[{"delay":1100,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
+												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
+													<p class="description">Protect and WOW your car!!!</p>
+												</div>
+
+												<!-- LAYER NR. 12 -->
+												<div class="tp-caption black  " id="slide-4-layer-3" data-x="center" data-hoffset="" data-y="422"
 												 data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-responsive="off"
 												 data-frames='[{"delay":1300,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
@@ -642,8 +681,8 @@
 				<div class="vc_row wpb_row vc_row-fluid page-margin-top-section">
 					<div class="wpb_column vc_column_container vc_col-sm-12">
 						<div class="wpb_wrapper">
-							<h2 class=" box-header">WHY CHOOSE US?<br /><span class="tiny">&nbsp;&nbsp;COLLISION REPAIR – AUTO PAINTING –
-									FENDERS & BUMPERS</span></h2>
+							<h2 class=" box-header">WHY CHOOSE US?<br /><span class="tiny">&nbsp;&nbsp;COLLISION REPAIR – AUTO PAINTING & WRAPPING –
+									FENDERS & BUMPERS </span></h2>
 
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
@@ -740,6 +779,21 @@
 											 class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="PAINT SCRATCH REPAIR" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
 										<h4 class="box-header"><a href="/services/paint-scratch-repair/" title="PAINT SCRATCH REPAIR">PAINT SCRATCH
 												REPAIR</a></h4>
+									</li>
+								</div>
+								<div class="vc_row wpb_row vc_row-fluid">
+									<li><a href="/services/blackout-package/" title="BLACKOUT PACKAGE"><img width="390" height="260" src="/assets/pics/blackout1.jpg"
+											 class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="BLACKOUT PACKAGE" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+										<h4 class="box-header"><a href="/services/blackout-package/" title="BLACKOUT PACKAGE">BLACKOUT PACKAGE</a></h4>
+									</li>
+									<li><a href="/services/wrapping-service/" title="CUSTOM CAR WRAPPING"><img width="390" height="260" src="/assets/pics/carwrap.jpg"
+											 class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="CUSTOM CAR WRAPPING" title=""
+											 sizes="(max-width: 390px) 100vw, 390px" /></a>
+										<h4 class="box-header"><a href="/services/wrapping-service/" title="CUSTOM CAR WRAPPING">CUSTOM WRAPPING</a></h4>
+									</li>
+									<li><a href="/services/camera-installation/" title="DASHCAM INSTALLATION"><img width="390" height="260" src="/assets/pics/dashcam1.jpg"
+											 class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="DASHCAM INSTALLATION" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+										<h4 class="box-header"><a href="/services/camera-installation/" title="DASHCAM INSTALLATION">DASHCAM INSTALLATION</a></h4>
 									</li>
 								</div>
 							</ul>
