--- a/services/index.html
+++ b/services/index.html
@@ -229,11 +229,13 @@
                                                 href="/services/auto-detailing/">Auto Detailing</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
-                                        <li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                        <li id="menu-item-1671" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1671"><a
                                                 href="/services/blackout-package/">Blackout Package</a></li>
-                                        <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                        <li id="menu-item-1672" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1672"><a
+                                                href="/services/wrapping-service/">Custom Car Wrapping</a></li>
+                                        <li id="menu-item-1673" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1673"><a
                                                 href="/services/camera-installation/">Dashcam Installation</a></li>
-                                        <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                        <li id="menu-item-1674" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1674"><a
                                                 href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
@@ -281,11 +283,13 @@
                                                 href="/services/auto-detailing/">Auto Detailing</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
-                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1671"><a
                                                 href="/services/blackout-package/">Blackout Package</a></li>
-                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1672"><a
+                                                href="/services/wrapping-service/">Custom Car Wrapping</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1673"><a
                                                 href="/services/camera-installation/">Dashcam Installation</a></li>
-                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1674"><a
                                                 href="/services/matte-paint-special/">Matte Paint Special</a></li>
                                     </ul>
                                 </li>
@@ -413,6 +417,24 @@
                                         <h4 class="box-header"><a href="/services/camera-installation/" title="DASH CAM INSTALLATION">DASH
                                                 CAM INSTALLATION</a></h4>
                                     </li>
+                                    <li><a href="/services/wrapping-service/" title="CUSTOM CAR WRAPPING"><img width="390"
+                                                height="260" src="/assets/pics/carwrap.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="CUSTOM CAR WRAPPING" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                        <h4 class="box-header"><a href="/services/wrapping-service/" title="CUSTOM CAR WRAPPING">CUSTOM CAR WRAPPING</a></h4>
+                                    </li>
+                                </div>
+                                <div class="vc_row wpb_row vc_row-fluid">
+                                  <li><a href="/services/bumper-repair/" title="BUMPER REPAIR"><img width="390"
+                                              height="260" src="/assets/pics/bumper2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                              alt="BUMPER REPAIR" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                      <h4 class="box-header"><a href="/services/bumper-repair/" title="BUMPER REPAIR">BUMPER
+                                              REPAIR</a></h4>
+                                  </li>
+                                  <li><a href="/services/rim-repair/" title="WHEEL RECONDITIONINGR"><img width="390" height="260"
+                                              src="/assets/pics/wheel.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                              alt="WHEEL RECONDITIONING" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                      <h4 class="box-header"><a href="/services/rim-repair/" title="WHEEL RECONDITIONING">WHEEL RECONDITIONING</a></h4>
+                                  </li>
                                     <li><a href="/services/matte-paint-special/" title="MATTE PAINT SPECIAL"><img width="390"
                                                 height="260" src="/assets/pics/matte2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
                                                 alt="MATTE PAINT SPECIAL" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
@@ -438,7 +460,7 @@
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
                         <div class="contact-details-box sl-small-certificate">
                             <p>All Services Backed by<br />
-                                a Written Guarantee</p>
+                                a Written Lifetime Guarantee</p>
                         </div>
                     </div>
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
@@ -456,20 +478,17 @@
                         <ul class="list simple margin-top-20 clearfix">
                             <li><span>San Diego:</span>(858) 455-9110</li>
                             <li><span>San Marcos:</span>(760) 688-7330</li>
-                            <li><span>Santee:</span>(619) 749-7899</li>
-                            <li><span>Lake Forest:</span>(949) 470-1600</li></br>
+                            <li><span>Santee:</span>(619) 749-7899</li></br>
                             <li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
                         </ul>
                         <ul class="social-icons gray margin-top-26 clearfix">
-                            <li style="background-color: #3b5998;"><a target='_blank' href="https://www.facebook.com/Accidentprossd/"
-                                    class="socials"><i class="fab fa-facebook-f"></i></a></li>
-                            <li style="background-color: #00aced;"><a target='_blank' href="#" class="socials"><i class="fab fa-twitter"></i></a></li>
-                            <li style="background-color: #e95950;"><a target='_blank' href="#" class="socials"><i class="fab fa-instagram"></i></a></li>
-                            <li style="background-color: #c41200;"><a target='_blank' href="https://www.yelp.com/biz/accident-pros-san-diego-2?osq=AcciDent+Pros"
-                                    class="socials"><i class="fab fa-yelp"></i></a></li>
+                            <li><a target='_blank' href="#" class="social-facebook"></a></li>
+                            <li><a target='_blank' href="#" class="social-twitter"></a></li>
+                            <li><a target='_blank' href="#" class="social-instagram"></a></li>
+                            <li><a target='_blank' href="#" class="social-yelp"></a></li>
                         </ul>
                     </div>
-                    <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
+                        <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
                         <h6 class='box-header'>LOCATIONS</h6>
                         <button class="accordionz margin-top-20"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN
                                 DIEGO, CA</h7></button>
