--- a/services/matte-paint-special/index.html
+++ b/services/matte-paint-special/index.html
@@ -229,6 +229,8 @@
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
                                         <li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
                                                 href="/services/blackout-package/">Blackout Package</a></li>
+                                                <li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                                        href="/services/wrapping-service/">Custom Car Wrapping</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/camera-installation/">Dash Cam Installation</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-1670"><a
@@ -292,6 +294,8 @@
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
                                                 href="/services/blackout-package/">Blackout
                                                 Package</a></li>
+                                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                                        href="/services/wrapping-service/">Custom Car Wrapping</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/camera-installation/">Dash
                                                 Cam Installation</a></li>
@@ -373,6 +377,8 @@
                                                     href="/services/headlight-restoration/">Headlight Restoration</a></li>
                                             <li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
                                                     href="/services/blackout-package/">Blackout Package</a></li>
+                                                    <li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+                                                            href="/services/wrapping-service/">Custom Car Wrapping</a></li>
                                             <li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
                                                     href="/services/camera-installation/">Dash Cam Installation</a></li>
                                             <li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services current-menu-item menu-item-899"><a
@@ -471,7 +477,7 @@
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
                         <div class="contact-details-box sl-small-certificate">
                             <p>All Services Backed by<br />
-                                a Written Guarantee</p>
+                                a Written Lifetime Guarantee</p>
                         </div>
                     </div>
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
@@ -489,17 +495,14 @@
                         <ul class="list simple margin-top-20 clearfix">
                             <li><span>San Diego:</span>(858) 455-9110</li>
                             <li><span>San Marcos:</span>(760) 688-7330</li>
-                            <li><span>Santee:</span>(619) 749-7899</li>
-                            <li><span>Lake Forest:</span>(949) 470-1600</li></br>
+                            <li><span>Santee:</span>(619) 749-7899</li></br>
                             <li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
                         </ul>
                         <ul class="social-icons gray margin-top-26 clearfix">
-                            <li style="background-color: #3b5998;"><a target='_blank' href="https://www.facebook.com/Accidentprossd/"
-                                    class="socials"><i class="fab fa-facebook-f"></i></a></li>
-                            <li style="background-color: #00aced;"><a target='_blank' href="#" class="socials"><i class="fab fa-twitter"></i></a></li>
-                            <li style="background-color: #e95950;"><a target='_blank' href="#" class="socials"><i class="fab fa-instagram"></i></a></li>
-                            <li style="background-color: #c41200;"><a target='_blank' href="https://www.yelp.com/biz/accident-pros-san-diego-2?osq=AcciDent+Pros"
-                                    class="socials"><i class="fab fa-yelp"></i></a></li>
+                            <li><a target='_blank' href="#" class="social-facebook"></a></li>
+                            <li><a target='_blank' href="#" class="social-twitter"></a></li>
+                            <li><a target='_blank' href="#" class="social-instagram"></a></li>
+                            <li><a target='_blank' href="#" class="social-yelp"></a></li>
                         </ul>
                     </div>
                     <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
