--- a/about/index.html
+++ b/about/index.html
@@ -362,7 +362,7 @@
                                         repair, paintless dent removal, paint touch up, scratch removal, rim repair,
                                         detailing, and windshield repair among many other services. When you bring your
                                         car to accident pros, you can rest assured your job will be done right. All our
-                                        work comes with a written guarantee!</p>
+                                        work comes with a written lifetime guarantee!</p>
 
                                 </div>
                             </div>
@@ -496,7 +496,7 @@
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
                         <div class="contact-details-box sl-small-certificate">
                             <p>All Services Backed by<br />
-                                a Written Guarantee</p>
+                                a Written Lifetime Guarantee</p>
                         </div>
                     </div>
                     <div class='vc_col-sm-4 wpb_column vc_column_container widget cs_contact_info_widget'>
@@ -514,17 +514,14 @@
                         <ul class="list simple margin-top-20 clearfix">
                             <li><span>San Diego:</span>(858) 455-9110</li>
                             <li><span>San Marcos:</span>(760) 688-7330</li>
-                            <li><span>Santee:</span>(619) 749-7899</li>
-                            <li><span>Lake Forest:</span>(949) 470-1600</li></br>
+                            <li><span>Santee:</span>(619) 749-7899</li></br>
                             <li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
                         </ul>
                         <ul class="social-icons gray margin-top-26 clearfix">
-                            <li style="background-color: #3b5998;"><a target='_blank' href="https://www.facebook.com/Accidentprossd/"
-                                    class="socials"><i class="fab fa-facebook-f"></i></a></li>
-                            <li style="background-color: #00aced;"><a target='_blank' href="#" class="socials"><i class="fab fa-twitter"></i></a></li>
-                            <li style="background-color: #e95950;"><a target='_blank' href="#" class="socials"><i class="fab fa-instagram"></i></a></li>
-                            <li style="background-color: #c41200;"><a target='_blank' href="https://www.yelp.com/biz/accident-pros-san-diego-2?osq=AcciDent+Pros"
-                                    class="socials"><i class="fab fa-yelp"></i></a></li>
+                            <li><a target='_blank' href="#" class="social-facebook"></a></li>
+                            <li><a target='_blank' href="#" class="social-twitter"></a></li>
+                            <li><a target='_blank' href="#" class="social-instagram"></a></li>
+                            <li><a target='_blank' href="#" class="social-yelp"></a></li>
                         </ul>
                     </div>
                     <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
