--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
 												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
 													<h2>WE ARE ACCIDENT PROS</h2>
+													<h3>Home of Lifetime Warranty Paint Jobs</h3>
 												</div>
 
 												<!-- LAYER NR. 3 -->
