--- a/services/rim-repair/index.html
+++ b/services/rim-repair/index.html
@@ -13,14 +13,12 @@
   gtag('config', 'UA-134698323-1');
 </script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134698323-1"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-134698323-1');
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1146866286018546",
+    enable_page_level_ads: true
+  });
 </script>
 
 	<meta charset="UTF-8" />
