removing Santee and adding Fontana

--- a/about/index.html
+++ b/about/index.html
@@ -530,7 +530,8 @@
                         <ul class="list simple margin-top-20 clearfix">
                             <li><span>San Diego:</span>(858) 455-9110</li>
                             <li><span>San Marcos:</span>(760) 688-7330</li>
-                            <li><span>Santee:</span>(619) 749-7899</li></br>
+                            <li><span>Fontana:</span>(619) 749-7899</li>
+                            <li><span>Lake Forest:</span>(949) 470-1600</li></br>
                             <li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
                         </ul>
                         <ul class="social-icons gray margin-top-26 clearfix">
@@ -554,9 +555,9 @@
                             <p>738 W San Marcos Blvd</br> San Marcos, CA 92078</p>
                         </div>
 
-                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SANTEE, CA</h7></button>
+                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FONTANA, CA</h7></button>
                         <div class="panel">
-                            <p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
+                            <p>15750 Arrow Blvd. Suite H</br> Fontana, CA 92335</p>
                         </div>
 
                         <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE
