--- a/appointment/index.html
+++ b/appointment/index.html
@@ -343,7 +343,7 @@
                             width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                     <div class='map'>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.263144569215!2d-116.97871558432541!3d32.838283680953495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d95806f8c0ec0b%3A0xb91e19c9609658dd!2s10147+Mission+Gorge+Rd%2C+Santee%2C+CA+92071!5e0!3m2!1sen!2sus!4v1546968925545"
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3303.8178679944294!2d-117.46361668392355!3d34.099805980593025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c34b815892e283%3A0x25d4571593fff1a4!2s15750+Arrow+Blvd+Suite+H%2C+Fontana%2C+CA+92335!5e0!3m2!1sen!2sus!4v1554957840127!5m2!1sen!2sus"
                             width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                     <div class='map'>
@@ -373,8 +373,8 @@
                                             <h5>San Marcos</h5>
                                         </div>
                                         <div id="loc-opt-3" class="vc_col-xs-3 loc-option"><input type="radio" name="location"
-                                                value="Santee">
-                                            <h5>Santee</h5>
+                                                value="Fontana">
+                                            <h5>Fontana</h5>
                                         </div>
                                         <div id="loc-opt-last" class="vc_col-xs-3 loc-option"><input type="radio" name="location"
                                                 value="Lake Forest">
@@ -391,7 +391,7 @@
                                             <option value="">Choose...</option>
                                             <option value="San Diego">San Diego</option>
                                             <option value="San Marcos">San Marcos</option>
-                                            <option value="Santee">Santee</option>
+                                            <option value="Fontana">Fontana</option>
                                             <option value="Lake Forest">Lake Forest</option>
                                         </select>
                                     </div>
@@ -640,7 +640,8 @@
                         <ul class="list simple margin-top-20 clearfix">
                             <li><span>San Diego:</span>(858) 455-9110</li>
                             <li><span>San Marcos:</span>(760) 688-7330</li>
-                            <li><span>Santee:</span>(619) 749-7899</li></br>
+                            <li><span>Fontana:</span>(909) 320-8200</li>
+                            <li><span>Lake Forest:</span>(949) 470-1600</li></br>
                             <li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
                         </ul>
                         <ul class="social-icons gray margin-top-26 clearfix">
@@ -662,9 +663,9 @@
                         <div class="panel">
                             <p>738 W San Marcos Blvd</br> San Marcos, CA 92078</p>
                         </div>
-                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SANTEE, CA</h7></button>
+                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FONTANA, CA</h7></button>
                         <div class="panel">
-                            <p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
+                            <p>15750 Arrow Blvd. Suite H</br> Fontana, CA 92335</p>
                         </div>
                         <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE
                                 FOREST, CA</h7></button>
