--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
-									<p>Auto Body Repair shops serving customers in the greater San Diego Area and Orange Country.</p>
+									<p>Auto Body Repair shops serving customers in the greater San Diego Area, Orange Country , and Fontana Area</p>
 								</div>
 							</div>
 							<div class="vc_row wpb_row vc_inner vc_row-fluid page-margin-top">
@@ -763,8 +763,8 @@
 							<h2 class=" box-header">FEATURE SERVICES</h2>
 							<div class="wpb_text_column wpb_content_element  description align-center">
 								<div class="wpb_wrapper">
-									<p>We offer a full range of garage services to drivers located in the greater San Diego area and Orange
-										County.</p>
+									<p>We offer a full range of garage services to drivers located in the greater San Diego area, Orange
+										County , and Fontana area.</p>
 
 								</div>
 							</div>
@@ -989,10 +989,10 @@
 
 							<div class="wpb_text_column wpb_content_element ">
 								<div class="wpb_wrapper">
-									<p>We proudly serve the areas of Carlsbad, Fallbrook, Escondido, Oceanside, San Diego, San Marcos, Vista, Del
+									<p>We proudly serve the all areas of Carlsbad, Fallbrook, Escondido, Oceanside, San Diego, San Marcos, Vista, Del
 										Mar, La Jolla, Encinitas, Solana Beach, Mira Mesa, North Park, City Heights, Hillcrest, Pacific Beach, Carmel
 										Valley, Rancho Bernardo, Poway, Rancho Penasquitos, Clairemont, Chula Vista, La Mesa, El Cajon, Santee,
-										Alpine, Leucadia, Rancho Santa Fe, 4S Ranch and North County.</p>
+										Alpine, Leucadia, Rancho Santa Fe, 4S Ranch and North County.  Also serve the all areas of Irvine and Fontana</p>
 
 								</div>
 							</div>
@@ -1101,7 +1101,7 @@
 						<ul class="list simple margin-top-20 clearfix">
 							<li><span>San Diego:</span>(858) 455-9110</li>
 							<li><span>San Marcos:</span>(760) 688-7330</li>
-							<li><span>Santee:</span>(619) 749-7899</li>
+							<li><span>Fontana:</span>(909) 320-8200</li>
 							<li><span>Lake Forest:</span>(949) 470-1600</li></br>
 							<li><span style="padding-left:30%;font-weight: bold;">E-mail:</span><a href="mailto:accidentprosusa@gmail.com">AccidentProsUSA@gmail.com</a></li>
 						</ul>
@@ -1124,9 +1124,9 @@
 						<div class="panel">
 							<p>738 W San Marcos Blvd</br> San Marcos, CA 92078</p>
 						</div>
-						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SANTEE, CA</h7></button>
+						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FONTANA, CA</h7></button>
 						<div class="panel">
-							<p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
+							<p>15750 Arrow Blvd. Suite H</br> Fontana, Ca 92335</p>
 						</div>
 						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE FOREST, CA</h7></button>
 						<div class="panel">
